--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -316,7 +316,7 @@
                                             <outlet property="avatarView" destination="4Uc-p6-gzK" id="NF5-ki-BX7"/>
                                             <outlet property="nameLabel" destination="liE-Iz-QQI" id="NWC-nL-NKm"/>
                                             <outlet property="subtitleLabel" destination="zRz-eM-Pe7" id="3eu-R2-ycm"/>
-                                            <segue destination="kBv-HD-oBL" kind="show" id="Hrk-zE-6Yh"/>
+                                            <segue destination="kBv-HD-oBL" kind="show" identifier="ChatsToConversation" id="Hrk-zE-6Yh"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -364,7 +364,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
                                         <rect key="frame" x="235" y="10" width="130.5" height="50"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uD7-V4-mF6">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uD7-V4-mF6" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="uD7-V4-mF6" secondAttribute="height" multiplier="1:1" id="L8M-Jg-TrG"/>
@@ -387,11 +387,12 @@
                                         <constraints>
                                             <constraint firstItem="Xhe-ik-k94" firstAttribute="top" secondItem="uD7-V4-mF6" secondAttribute="centerY" id="0S5-1z-60d"/>
                                             <constraint firstAttribute="bottom" secondItem="uD7-V4-mF6" secondAttribute="bottom" id="2L5-bQ-vVw"/>
-                                            <constraint firstAttribute="trailing" secondItem="e0x-EU-7eq" secondAttribute="trailing" id="3z9-Hf-7in"/>
+                                            <constraint firstAttribute="trailing" secondItem="e0x-EU-7eq" secondAttribute="trailing" priority="749" id="3z9-Hf-7in"/>
                                             <constraint firstItem="Xhe-ik-k94" firstAttribute="leading" secondItem="e0x-EU-7eq" secondAttribute="leading" id="Eio-rf-9Az"/>
                                             <constraint firstItem="uD7-V4-mF6" firstAttribute="top" secondItem="KPL-gz-OCJ" secondAttribute="top" id="Jyk-KW-oeC"/>
                                             <constraint firstItem="e0x-EU-7eq" firstAttribute="bottom" secondItem="uD7-V4-mF6" secondAttribute="centerY" id="RbV-Y0-dsX"/>
                                             <constraint firstItem="uD7-V4-mF6" firstAttribute="leading" secondItem="KPL-gz-OCJ" secondAttribute="leading" id="T8O-Yh-Zmd"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Xhe-ik-k94" secondAttribute="trailing" id="Yb4-HX-fRY"/>
                                             <constraint firstItem="e0x-EU-7eq" firstAttribute="leading" secondItem="uD7-V4-mF6" secondAttribute="trailing" constant="8" id="aG5-1e-iU4"/>
                                         </constraints>
                                     </view>
@@ -433,6 +434,11 @@
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="activityLabel" destination="Xhe-ik-k94" id="hWw-q1-f3l"/>
+                        <outlet property="avatarView" destination="uD7-V4-mF6" id="iA7-v4-S7S"/>
+                        <outlet property="nameLabel" destination="e0x-EU-7eq" id="DLz-9l-GuL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OaH-F1-uJP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
